{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 80,
  "lineage": "be4e658f-085b-aeb3-0b37-915950a4cff7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "App",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fa63acd0082a481a",
            "association_id": "eipassoc-099d92d0bdc8ac027",
            "domain": "vpc",
            "id": "eipalloc-0fa63acd0082a481a",
            "instance": "i-0fdd505a52c5ae9c6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09d6da21577111e9e",
            "private_dns": "ip-172-16-0-181.ec2.internal",
            "private_ip": "172.16.0.181",
            "public_dns": "ec2-44-210-6-150.compute-1.amazonaws.com",
            "public_ip": "44.210.6.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instances",
            "aws_key_pair.key",
            "aws_security_group.allow_http",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Dev",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-063395c786dec79ad",
            "association_id": "eipassoc-0047aaafc3ca2c7b9",
            "domain": "vpc",
            "id": "eipalloc-063395c786dec79ad",
            "instance": "i-005c2e7b9c5e6d643",
            "network_border_group": "us-east-1",
            "network_interface": "eni-057ba21103e1dc36c",
            "private_dns": "ip-172-16-1-128.ec2.internal",
            "private_ip": "172.16.1.128",
            "public_dns": "ec2-3-222-191-65.compute-1.amazonaws.com",
            "public_ip": "3.222.191.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instances",
            "aws_key_pair.key",
            "aws_security_group.allow_http",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Web",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c9a583841f346447",
            "domain": "vpc",
            "id": "eipalloc-0c9a583841f346447",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-70-59-42.compute-1.amazonaws.com",
            "public_ip": "52.70.59.42",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instances",
            "aws_key_pair.key",
            "aws_security_group.allow_http",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "App",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:453745910386:instance/i-0fdd505a52c5ae9c6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fdd505a52c5ae9c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2labhomework-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d6da21577111e9e",
            "private_dns": "ip-172-16-0-181.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.0.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0640e46569fc8e105",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ab4d4b3565498307",
            "tags": {
              "Name": "App"
            },
            "tags_all": {
              "Name": "App"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033f3bb98dea22670"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.allow_http",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Dev",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:453745910386:instance/i-005c2e7b9c5e6d643",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-005c2e7b9c5e6d643",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2labhomework-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057ba21103e1dc36c",
            "private_dns": "ip-172-16-1-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e4cc7e7c8c14fa0d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb85e7729110aeda",
            "tags": {
              "Name": "Dev"
            },
            "tags_all": {
              "Name": "Dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033f3bb98dea22670"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.allow_http",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "Web",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0230bd60aa48260c6",
            "arn": "arn:aws:ec2:us-east-1:453745910386:instance/i-07a7b3e497afbbe2d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a7b3e497afbbe2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2labhomework-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0578244f4d69891bc",
            "private_dns": "ip-172-16-2-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a27c0c4ba631bab9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09b65596e5dd20c72",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-033f3bb98dea22670"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.allow_http",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:453745910386:internet-gateway/igw-02c81dde914a33210",
            "id": "igw-02c81dde914a33210",
            "owner_id": "453745910386",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-000909783831c4c0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:453745910386:route-table/rtb-0efe832ff8a52b704",
            "id": "rtb-0efe832ff8a52b704",
            "owner_id": "453745910386",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c81dde914a33210",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-000909783831c4c0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0622d2591e0af2ecf",
            "route_table_id": "rtb-0efe832ff8a52b704",
            "subnet_id": "subnet-0ab4d4b3565498307"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "pub_sub_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08071a680a36daae3",
            "route_table_id": "rtb-0efe832ff8a52b704",
            "subnet_id": "subnet-0cb85e7729110aeda"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "pub_sub_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003b0aeec88fda38c",
            "route_table_id": "rtb-0efe832ff8a52b704",
            "subnet_id": "subnet-09b65596e5dd20c72"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:453745910386:security-group/sg-033f3bb98dea22670",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033f3bb98dea22670",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231209020001828900000001",
            "name_prefix": "terraform-",
            "owner_id": "453745910386",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-http-sg"
            },
            "tags_all": {
              "Name": "allow-http-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000909783831c4c0a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:453745910386:subnet/subnet-0ab4d4b3565498307",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab4d4b3565498307",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "453745910386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub_sub_1"
            },
            "tags_all": {
              "Name": "subnet-pub_sub_1"
            },
            "vpc_id": "vpc-000909783831c4c0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "pub_sub_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:453745910386:subnet/subnet-0cb85e7729110aeda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb85e7729110aeda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "453745910386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub_sub_2"
            },
            "tags_all": {
              "Name": "subnet-pub_sub_2"
            },
            "vpc_id": "vpc-000909783831c4c0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "pub_sub_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:453745910386:subnet/subnet-09b65596e5dd20c72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b65596e5dd20c72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "453745910386",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-pub_sub_3"
            },
            "tags_all": {
              "Name": "subnet-pub_sub_3"
            },
            "vpc_id": "vpc-000909783831c4c0a"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:453745910386:vpc/vpc-000909783831c4c0a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0359734c27bf13f5e",
            "default_route_table_id": "rtb-0021e8d3574dd4830",
            "default_security_group_id": "sg-0e526dc725004a84a",
            "dhcp_options_id": "dopt-0c531a073cb3466bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000909783831c4c0a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0021e8d3574dd4830",
            "owner_id": "453745910386",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}